
- Correct location of context menu popup (#4073 - Dale Anson)

- Fix file browser splitter buttons not working (#4081 - Dale Anson)

}}}
{{{ Miscellaneous

- Added new method JEditBuffer.hasProperty() (Matthieu Casanova)

- Apply UI language changes immediately without the need to restart.
  (Björn "Vampire" Kautler)

- The tray icon on Linux systems now by default tries to detect the proper
  background color and also lets the user either select a fixed color for
  the background or select some arbitrary rectangle as background for the
  tray icon, making the icon much less ugly on dark themes.
  (Björn "Vampire" Kautler)

- The Windows EXE launcher now considers JAVA_HOME environment variable if no
  matching Java is found in the registry (Björn "Vampire" Kautler)

- The Windows installer now uses modern and resizable style and allows
  installation without administrator privileges (Björn "Vampire" Kautler)

- Chinese Taiwan localization from David Day (Patch #620 - Dale Anson)

- Fix all deprecation warnings produced when compiling with Java 9 (Dale Anson)

- Adjust Appearance option pane to allow setting "primary" and "secondary" fonts
  for all look and feels (Dale Anson)

- Improve Regular Expressions documentation (Björn "Vampire" Kautler)

}}}
{{{ API Changes

- GUIUtilities.showVFSFileDialog() methods now never returns null (Matthieu Casanova)

- New Method VFSManager.canReadFile(path) (Matthieu Casanova)

- New method IntegerArray.isEmpty() (Matthieu Casanova)

}}}
{{{ Editing

- Update RPM Spec mode (bug #3880 Matthieu Casanova)

- Added openSIPS mode (Matthieu Casanova)

- Update Java mode to support Java 10 "var" type. (Dale Anson)

- Add PlantUML mode (Andreas Studer / Dale Anson)

- Add HL7 mode (Thiemo Kellner / Dale Anson)

- Update drawj2d mode (patch ##622 A. Vontobel / Matthieu Casanova)

}}}

}}}

jEdit buffer local properties:
:maxLineLen=80:wrap=hard:autoIndent=simple:noTabs=true:indentSize=2:tabSize=2:
:folding=explicit:collapseFolds=2: