@@ -1,0 +1,42 @@
+/*
+ * jEdit - Programmer's Text Editor
+ * :tabSize=8:indentSize=8:noTabs=false:
+ * :folding=explicit:collapseFolds=1:
+ *
+ * Copyright © 2020 jEdit contributors
+ *
+ * This program is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License
+ * as published by the Free Software Foundation; either version 2
+ * of the License, or any later version.
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
+ */
+
+package org.gjt.sp.jedit.gui.statusbar;
+
+/**
+ * An abstract widget with default implementation of methods {@link #update()} and {@link #propertiesChanged()}
+ * that are not required in all widgets
+ *
+ * @since jEdit 5.6pre1
+ * @author Matthieu Casanova
+ */
+public abstract class AbstractWidget implements Widget
+{
+	@Override
+	public void update()
+	{
+	}
+
+	@Override
+	public void propertiesChanged()
+	{
+	}
+}
