@@ -23,9 +23,6 @@
 package org.gjt.sp.jedit.gui.statusbar;
 
 //{{{ Imports
-import java.awt.Dimension;
-import java.awt.Font;
-import java.awt.FontMetrics;
 import java.awt.event.MouseAdapter;
 import java.awt.event.MouseEvent;
 import javax.swing.JComponent;
@@ -42,6 +39,7 @@ import org.gjt.sp.jedit.jEdit;
  */
 public class IndentWidgetFactory implements StatusWidgetFactory
 {
+	@Override
 	public Widget getWidget(View view)
 	{
 		Widget indent = new IndentWidget(view);
@@ -49,11 +47,12 @@ public class IndentWidgetFactory implements StatusWidgetFactory
 	}
 
 	//{{{ IndentWidget class
-	private static class IndentWidget implements Widget
+	private static class IndentWidget extends AbstractWidget
 	{
 		private final JLabel indent;
 		private final View view;
-		public IndentWidget(final View view)
+
+		IndentWidget(final View view)
 		{
 			indent = new ToolTipLabel();
 			indent.setHorizontalAlignment(SwingConstants.CENTER);
@@ -71,11 +70,13 @@ public class IndentWidgetFactory implements StatusWidgetFactory
 			});
 		}
 
+		@Override
 		public JComponent getComponent()
 		{
 			return indent;
 		}
 
+		@Override
 		public void update()
 		{
 			Buffer buffer = view.getBuffer();
@@ -98,10 +99,5 @@ public class IndentWidgetFactory implements StatusWidgetFactory
 				this.indent.setText("n");
 			}
 		}
-		
-		public void propertiesChanged()
-		{
-		}
 	} //}}}
-
 }
